test/data/codegen/valid/scalar_null/queries.cypher
// name: OneNull :one
RETURN null AS n
