test/data/codegen/invalid/out_of_c2_scope_scalar_return/queries.cypher
// name: OneNumber :one
RETURN 1 AS n
